9. Istio-Traffic-Management/express-manifest/1_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: express-sample
  labels:
    istio-injection: enabled
