9. Istio-Traffic-Management/express-manifest/3_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: express
  name: express
  namespace: express-sample
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: express
